force-app/main/default/objects/Account_Relationship__c/Account_Relationship__c.object-meta.xml
<CustomObject>
    <description>Stores the ERP (SAP) specific information between an account and related account under a given Account Sales Area. Source of majority of the data is ERP (SAP) system</description>
    <label>Account Relationship</label>
    <nameField>
        <displayFormat>ERP_PF{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Relationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>