force-app/main/default/objects/Account_Relationship__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>This field maintain the account.</description>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Partner_Functions</relationshipName>
    <type>Lookup</type>
</CustomField>