force-app/main/default/objects/Account_Relationship__c/fields/Account_Sales_Area__c.field-meta.xml
<CustomField>
    <fullName>Account_Sales_Area__c</fullName>
    <description>This field stores account sales area related to Account which is synced through SAP.</description>
    <label>Account Sales Area</label>
    <referenceTo>Account_Sales_Area__c</referenceTo>
    <relationshipLabel>Account Relationships</relationshipLabel>
    <relationshipName>Partner_Functions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>