force-app/main/default/objects/Account_Relationship__c/fields/Default_Partner__c.field-meta.xml
<CustomField>
    <fullName>Default_Partner__c</fullName>
    <defaultValue>false</defaultValue>
    <description>DCP-28541 - To default the bill to/ ship to</description>
    <label>Default Partner</label>
    <type>Checkbox</type>
</CustomField>