force-app/main/default/objects/Account_Relationship__c/fields/ERP_Account_Relationship_Id__c.field-meta.xml
<CustomField>
    <fullName>ERP_Account_Relationship_Id__c</fullName>
    <description>This field stores ERP (SAP) external relationship id.</description>
    <externalId>true</externalId>
    <label>ERP Account Relationship Id</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>