force-app/main/default/objects/Account_Relationship__c/fields/ERP_Customer_Id__c.field-meta.xml
<CustomField>
    <fullName>ERP_Customer_Id__c</fullName>
    <description>Account&apos;s ERP Id</description>
    <externalId>true</externalId>
    <label>ERP Customer Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>