force-app/main/default/objects/Account_Relationship__c/fields/IsInactive__c.field-meta.xml
<CustomField>
    <fullName>IsInactive__c</fullName>
    <description>This field is used to identify whether Account Relationship is active or not.</description>
    <defaultValue>false</defaultValue>
    <label>IsInactive</label>
    <type>Checkbox</type>
</CustomField>