force-app/main/default/objects/Account_Relationship__c/fields/Related_ERP_Customer_Id__c.field-meta.xml
<CustomField>
    <fullName>Related_ERP_Customer_Id__c</fullName>
    <description>Customer Master Data Record&apos;s ERP Id</description>
    <label>Related ERP Customer Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>