force-app/main/default/objects/Account_Relationship__c/fields/Relationship__c.field-meta.xml
<CustomField>
    <fullName>Relationship__c</fullName>
    <description>This picklist field is used to identify relationship with Account.</description>
    <label>Relationship</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Bill To</fullName>
            </value>
            <value>
                <fullName>Code Desc Missing</fullName>
            </value>
            <value>
                <fullName>Distributor</fullName>
            </value>
            <value>
                <fullName>Payer</fullName>
            </value>
            <value>
                <fullName>Ship To</fullName>
            </value>
            <value>
                <fullName>Sold To</fullName>
            </value>
            <value>
                <fullName>Ultimate Consignee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>